--- a/day1/task1.html
+++ b/day1/task1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
-    <div>
+    <div class="m">
       <span>Margin</span>
       <div class="b">
         <span>Border</span>
