--- a/day1/index.html
+++ b/day1/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="task1.html"><h2>Day1</h2></a>
-    <a href="task2.html"><h2>Day2</h2></a>
+    <a href="task1.html"><h2>Task1</h2></a>
+    <a href="task2.html"><h2>Task2</h2></a>
 </body>
 </html>
