--- a/day2/task3.html
+++ b/day2/task3.html
@@ -7,7 +7,24 @@
     <link rel="stylesheet" href="sty3.css" />
   </head>
   <body>
-    <div class="pp">
+    <header>
+        <a href="https://www.w3schools.com/html/default.asp">HTML</a>
+    <a href="https://www.w3schools.com/css/default.asp">CSS</a>
+    <a href="https://www.w3schools.com/js/default.asp">JAVASCRIPT</a>
+    <a href="https://www.w3schools.com/sql/default.asp">SQL</a>
+    <a href="https://www.w3schools.com/python/default.asp">PYTHON</a>
+    <a href="https://www.w3schools.com/java/default.asp">JAVA</a>
+    <a href="https://www.w3schools.com/php/default.asp">PHP</a>
+    <a href="https://www.w3schools.com/howto/default.asp">HOWTO</a>
+    <a href="https://www.w3schools.com/w3css/default.asp">w3.CSS</a>
+    <a href="https://www.w3schools.com/c/index.php">C</a>
+    <a href="https://www.w3schools.com/cpp/default.asp">C++</a>
+    <a href="https://www.w3schools.com/cs/index.php">C#</a>
+    <a href="https://www.w3schools.com/bootstrap/bootstrap_ver.asp">BOOTSTRAP</a>
+    <a href="https://www.w3schools.com/react/default.asp">REACT</a>
+    <a href="https://www.w3schools.com/mysql/default.asp">MYSQL</a>
+</header>
+<div class="pp">
       <div class="d1 d">
         <span>PHP </span><br />A web server programming language
         <a href="https://www.w3schools.com/php/default.asp"
