--- a/day3/index.html
+++ b/day3/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <a href="task1.html">Task1</a>
+        <a href="task1.html">Task1</a> <br>
         <a href="task3.html">Task2</a>
 
     </div>
