--- a/day5/task2.html
+++ b/day5/task2.html
@@ -7,101 +7,136 @@
     <link rel="stylesheet" href="style2.css" />
   </head>
   <body>
-    <header><div><a href="#mainimage" class="title">Gourmet au Catering</a></div>
-      <!-- <a href="https://www.w3schools.com/w3css/tryw3css_templates_gourmet_catering.htm#home" class="title">Gourmet au Catering</a -->
-      <div class="navbar" >
+    <header>
+      <div><a href="#mainimage" class="title">Gourmet au Catering</a></div>
+      <div class="navbar">
         <a href="#About">About</a>
         <a href="#Menu">Menu</a>
         <a href="#Contact">Contact</a>
       </div>
     </header>
     <main>
-      <!-- <div> -->
-      <div >
+      <div>
         <img
-          src="https://images.pexels.com/photos/750073/pexels-photo-750073.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1https://images.pexels.com/photos/750073/pexels-photo-750073.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" id="mainimage"
+          src="https://images.pexels.com/photos/750073/pexels-photo-750073.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1https://images.pexels.com/photos/750073/pexels-photo-750073.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          id="mainimage"
           class="image1"
           alt=""
         />
       </div>
       <div class="imagetext">Le Catering</div>
-      <!-- </div> -->
-      <div class="page2" >
+      <div class="page2" id="About">
         <div>
           <img
-            src="https://www.w3schools.com/w3images/tablesetting2.jpg" class="image2"
+            src="https://www.w3schools.com/w3images/tablesetting2.jpg"
+            class="image2" 
             alt=""
           />
         </div>
 
-        <div  class="text1">
-          
-            <h1 class="s" id="About" >About Catering </h1> 
-<br>    
-              <span class="s s1 "> Tradition since 1889 </span>   
-        <p class="para1"> The Catering was founded in blabla by Mr. Smith in lorem ipsum dolor
-          sit amet, consectetur adipiscing elit consectetur adipiscing elit, sed
-          do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute iruredolor in reprehenderit
-          in voluptate velit esse cillum dolore eu fugiat nulla pariatur.We only
-          use <span style="background-color: silver;">seasonal</span> ingredients.</p>
-       <p class="para2">  Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est
-          laborum consectetur adipiscing elit, sed do eiusmod temporincididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-          nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. </p>
+        <div class="text1">
+          <h1 class="s" >About Catering</h1>
+          <br />
+          <span class="s s1"> Tradition since 1889 </span>
+          <p class="para1">
+            The Catering was founded in blabla by Mr. Smith in lorem ipsum dolor
+            sit amet, consectetur adipiscing elit consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat. Duis aute iruredolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur.We only use
+            <span style="background-color: silver">seasonal</span> ingredients.
+          </p>
+          <p class="para2">
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id est laborum consectetur adipiscing
+            elit, sed do eiusmod temporincididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
         </div>
-      </div>  <br> <br> <br><hr style="color: rgb(9, 69, 161);">
+      </div>
+      <br />
+      <br />
+      <br />
+      <hr style="color: rgb(9, 69, 161)" />
 
-
-
-
-
-      <div class="page3">
-        <div class="text2" >
-        <h1 class="menu1" id="Menu">Our Menu</h1> <br>
-        <h2>Bread Basket</h2>
-        <h4>Assortment of fresh baked fruit breads and muffins 5.50</h4> <br>
-         <h2>Honey Almond Granola with Fruits</h2>
-         <h4>Natural cereal of honey toasted oats, raisins, almonds and dates 7.00</h4> <br>
-         <h2>Belgian Waffle</h2>
-         <h4>Vanilla flavored batter with malted flour 7.50</h4> <br>
-         <h2>Scrambled eggs</h2>
-         <h4>Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</h4> <br>
-         <h2>Blueberry Pancakes</h2>
-         <h4>With syrup, butter and lots of berries 8.50</h4> <br>
-</div>
-<div>
-        <img src="https://www.w3schools.com/w3images/tablesetting.jpg" alt="" class="image3">
-    </div>
-
-      </div>  <br><br> <br><hr>
-
-
-
-
+      <div class="page3" id="Menu">
+        <div class="text2">
+          <h1 class="menu1" >Our Menu</h1>
+          <br />
+          <h2>Bread Basket</h2>
+          <h4>Assortment of fresh baked fruit breads and muffins 5.50</h4>
+          <br />
+          <h2>Honey Almond Granola with Fruits</h2>
+          <h4>
+            Natural cereal of honey toasted oats, raisins, almonds and dates
+            7.00
+          </h4>
+          <br />
+          <h2>Belgian Waffle</h2>
+          <h4>Vanilla flavored batter with malted flour 7.50</h4>
+          <br />
+          <h2>Scrambled eggs</h2>
+          <h4>
+            Scrambled eggs, roasted red pepper and garlic, with green onions
+            7.50
+          </h4>
+          <br />
+          <h2>Blueberry Pancakes</h2>
+          <h4>With syrup, butter and lots of berries 8.50</h4>
+          <br />
+        </div>
+        <div>
+          <img
+            src="https://www.w3schools.com/w3images/tablesetting.jpg"
+            alt=""
+            class="image3"
+          />
+        </div>
+      </div>
+      <br /><br />
+      <br />
+      <hr />
     </main>
     <div class="details">
-        <h1 class="Contact" id="Contact" >Contact</h1>
-       <p class="para3">We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us.</p>
-      <br>
-       <h3>Catering Service, 42nd Living St, 43043 New York, NY</h3>
-   <p class="para3">You can also contact us by phone 00553123-2323 or email catering@catering.com, or you can send us a message here:
-
-   </p> <br>
-<form action="">
-  <p> <input class="input" placeholder="Name" fdprocessedid="dqgwmm" required> 
-   <input class="input" type="number" placeholder="How Many People" required > 
-   <input class="input" type="datetime-local" placeholder="mm/dd/yyyy __:__" required> 
-   <input class="input" type="text" placeholder="Message"> </p>
-  <button input type="submit">SEND MESSAGE</button>
-</form>
-   </div>
-   <footer>
-    powered by <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a>
-   </footer>
-
+      <h1 class="Contact" id="Contact">Contact</h1>
+      <p class="para3">
+        We offer full-service catering for any event, large or small. We
+        understand your needs and we will cater the food to satisfy the biggerst
+        criteria of them all, both look and taste. Do not hesitate to contact
+        us.
+      </p>
+      <br />
+      <h3>Catering Service, 42nd Living St, 43043 New York, NY</h3>
+      <p class="para3">
+        You can also contact us by phone 00553123-2323 or email
+        catering@catering.com, or you can send us a message here:
+      </p>
+      <br />
+      <form action="https://formsubmit.co/yannaramu908@gmail.com" method="post">
+        <p>
+          <input
+            class="input"
+            placeholder="Name"
+            required
+          />
+          <input
+            class="input"
+            type="number"
+            placeholder="How Many People"
+            required
+          />
+          <input class="input" type="datetime-local" required />
+          <input class="input" type="text" placeholder="Message" />
+        </p>
+        <button input type="submit">SEND MESSAGE</button>
+      </form>
+    </div>
+    <footer>
+      powered by
+      <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a>
+    </footer>
   </body>
 </html>
