--- a/day5/task2.html
+++ b/day5/task2.html
@@ -16,7 +16,7 @@
       </div>
     </header>
     <main>
-      <div>
+      <div class="imt">
         <img
           src="https://images.pexels.com/photos/750073/pexels-photo-750073.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1https://images.pexels.com/photos/750073/pexels-photo-750073.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
           id="mainimage"
