--- a/day5/task2.html
+++ b/day5/task2.html
@@ -136,7 +136,7 @@
     </div>
     <footer>
       powered by
-      <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a>
+      <a href="https://www.w3schools.com/w3css/default.asp"><u>w3.css</u></a>
     </footer>
   </body>
 </html>
