--- a/practice.html
+++ b/practice.html
@@ -12,11 +12,14 @@
             border: 2px solid black;
             width: 40%;
             height: 50vh;
+            gap: 10px 10px;
+            padding: 8px;
         }
         .header{
             grid-area: header;
             border: 2px solid black;  
             background-color: red; 
+            
         }
         .nav{
             grid-area: nav;
