--- a/day4/task2.html
+++ b/day4/task2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style2.css" />
   </head>
   <body>
-    <div class="dropdown"></div>
+    <div class="dropdown">
       <button class="button">Menu</button>
       <div class="content">
         <a href="https://www.bmw.in/en/index.html">bmw</a>
@@ -16,6 +16,7 @@
           >rolls-royce</a
         >
       </div>
+    </div>
     </div>
   </body>
 </html>
