--- a/day5/task2.html
+++ b/day5/task2.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style2.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
   </head>
   <body>
     <header>
@@ -24,7 +29,7 @@
           alt=""
         />
       </div>
-      <div class="imagetext">Le Catering</div>
+      <div class=" imagetext animate__animated animate__bounce animate__delay-1s">Le Catering</div>
       <div class="page2" id="About">
         <div>
           <img
